[gd_scene load_steps=2 format=3 uid="uid://b5ucfx8fc6ffe"]

[ext_resource type="Script" uid="uid://swlh1ijj3r4g" path="res://scenes/ui/game_ui.gd" id="1_gwk6t"]

[node name="GameUI" type="CanvasLayer" node_paths=PackedStringArray("start_button", "pause_button", "show_rhythm_ui_button")]
script = ExtResource("1_gwk6t")
start_button = NodePath("GameControlsMC/HBoxContainer/StartButton")
pause_button = NodePath("GameControlsMC/HBoxContainer/PauseButton")
show_rhythm_ui_button = NodePath("VisualsMC/HBoxContainer/ShowRhythmUIButton")

[node name="GameControlsMC" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.5
offset_top = -40.0
offset_right = 46.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="GameControlsMC"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="GameControlsMC/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="Stop" type="Button" parent="GameControlsMC/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Stop"

[node name="PauseButton" type="Button" parent="GameControlsMC/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Pause"

[node name="VisualsMC" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -55.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VisualsMC"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShowRhythmUIButton" type="Button" parent="VisualsMC/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
text = "Hide Rhyhthm UI"

[connection signal="pressed" from="GameControlsMC/HBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="GameControlsMC/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="toggled" from="GameControlsMC/HBoxContainer/PauseButton" to="." method="_on_pause_toggled"]
[connection signal="toggled" from="VisualsMC/HBoxContainer/ShowRhythmUIButton" to="." method="_on_show_rhythm_ui_button_toggled"]
